Add facility img media query for tablet(md)

--- a/src/styles/components/_facility-card.scss
+++ b/src/styles/components/_facility-card.scss
@@ -52,6 +52,10 @@
     &-img {
       height: 100px;
       padding-bottom: 20px;
+
+      @media #{$md} {
+        height: 120px;
+      }
     }
 
     &-info {
