--- a/src/styles/components/_location-select.scss
+++ b/src/styles/components/_location-select.scss
@@ -23,6 +23,7 @@
     max-width: 100%;
     padding: 0.5rem 5.5rem 0.5rem 1rem;
     min-height: 2.5rem;
+    text-align: center;
 
     &::-ms-expand {
       display: none;
