Increase font size of amentities title

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -102,7 +102,7 @@ p {
 
 .modal {
   &__amenities-label {
-    font-size: $font-lg;
+    font-size: $font-xl;
     text-decoration: underline;
     font-weight: $weight-bold;
   }
