Format modal close button and list font

--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -3,6 +3,8 @@
     background-color: $white-70;
     border-color: $white-70;
     border-radius: 4px;
+    padding: 8px;
+    width: 4.5em;
   }
 
   &__close {
