--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -109,7 +109,7 @@ p {
 
   &__btn {
     color: $black-50;
-    font-size: $font-md;
+    font-size: $font-lg;
     font-weight: $weight-bold;
   }
 
@@ -119,7 +119,7 @@ p {
   }
 
   &__list {
-    font-size: $font-md;
+    font-size: $font-lg;
     font-weight: $weight-bold;
   }
 
